tests/errors/substructural/composition/enum_move_of_non_move_payload.sim

            struct Inner { r: &out i64 }
            enum Wrap: Move { W: Inner }
            